@@ -5,6 +5,7 @@ import org.statistics.CharCount;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.Map;
@@ -12,6 +13,7 @@ import java.util.concurrent.atomic.AtomicLong;
 
 public class TempCollector {
 
+    static final String PATH = "src/test/resources/";
     private static final String CHARS = "qwertyuiopasdfghjklzxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM1234567890";
     private final Map<Character, CharCount> charStatisticsMap = new HashMap<>();
     private Path tempFile;
@@ -40,12 +42,14 @@ public class TempCollector {
             line.append(ch);
 
             if (ch != '\n') {
-                charStatisticsMap.computeIfAbsent(ch, key -> new CharCount(key, new AtomicLong(0)));
-                charStatisticsMap.get(ch).getCount().incrementAndGet();
+                charStatisticsMap
+                        .computeIfAbsent(ch, key -> new CharCount(key, new AtomicLong(0)))
+                        .getCount()
+                        .incrementAndGet();
             }
         }
 
-        Path tempFile = Files.createTempFile(Path.of("src/test/resources/"), "temp", ".txt");
+        Path tempFile = Files.createTempFile(Paths.get(PATH), "temp", ".txt");
         this.tempFile = tempFile;
         Files.write(tempFile, Collections.singleton(line.toString()));
     }
